--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vue/cli-service": "^4.3.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "1.0.0-beta.31",
+    "dayjs": "^1.8.27",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
