--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-plugin-component": "^1.1.1",
     "babel-preset-es2015": "^6.24.1",
     "dayjs": "^1.8.27",
+    "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
