--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/echarts": "^4.6.3",
     "core-js": "^3.6.4",
+    "echarts-gl": "^1.1.1",
     "global": "^4.4.0",
     "register-service-worker": "^1.7.1",
     "serve": "^11.3.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-class-component": "^7.2.3",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
